--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -71,4 +72,62 @@
 .fileList .fileItem button {
   width: 100%;
   margin-top: 5px;
+}
+
+.menu-item {
+  text-decoration: none;
+}
+
+.login-background {
+  background-color: rgb(60 186 253);
+}
+
+.form-login {
+  width: 420px;
+  border-radius: 10px;
+}
+
+.social-heading {
+  margin: 0px 0px 15px;
+  position: relative;
+}
+
+.social-heading::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: rgb(242, 242, 242);
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+.social-heading span {
+  font-size: 15px;
+  color: rgb(120, 120, 120);
+  display: inline-block;
+  background: rgb(255, 255, 255);
+  padding: 0px 20px;
+  position: relative;
+  z-index: 2;
+}
+
+.social__items {
+  display: flex;
+  flex-direction: row;
+  padding: 0px;
+  margin: 0px 0px 10px;
+  list-style: none;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+}
+
+.note {
+  font-size: 12px;
+  color: rgb(120, 120, 120);
+  text-align: center;
 }
